Changelog 0.8.0.8
-----------------
[SA-00487] network connection is not working correct
[SA-00492] Mediaplayer: OGG Vorbis files displayed as videos
[SA-00491] Sally: update Team in sally
[SA-00497] Sally: CApp: HasApplication() option is not working


Changelog 0.8.0.6
-----------------
[SA-00483] MediaPlayer: it's possible to rewind into the previous song... that should not be possible
[SA-00482] MediaPlayer: only 2 songs in the playlist, results in playing every song twice
[SA-00485] ImageBrowser: remote control back is working the wrong way


Changelog 0.8.0.4
-----------------
[SA-00480] fix minor bugs
[SA-00481] use the database suggestions in the album cover view


Changelog 0.8.0.3
-----------------
[SA-00438] extend facebook app
+ adjust the error messages
+ make Facebook popups configureable: on/off
+ new design
+ show messages from wall
+ show messages from news
[SA-00475] text is cut off on the right side of the controls


Changelog 0.8.0.1
-----------------
[SA-00434] MediaPlayer: "add all" from the explorer doesn't not sort the files alphanumeric - so they end up totally mixed in the playlist
[SA-00432] Sally: add Desktop shortcut to the CFileBrowser
[SA-00433] MediaPlayer: explorer already remembers the last folder the explorer was in - should also remember the folder depth
[SA-00427] Sally: (multimedia) keyboard keys should be handled by sally, even when sally don't have the focus (can be turned on / off in the settings)
+ fixed some strange behavior
[SA-00429] SallyAPI: LPD3DXFONT DrawText Scrolling
[NO-TICKET] SallyAPI: changed the description field in the CAboutDialog from CLabelBox to CEditBox
[SA-00435] SallyAPI: ListView sorting of items
+ implement in the playlist of the mediaplayer
[SA-00439] SallyAPI: implement hold click
[SA-00445] SallyAPI: Sound should unmute if the volume controller is changed
[SA-00446] SallyAPI: dropdown box with many items does not scroll to the currently selected one