@@ -125,6 +125,7 @@
 #define GUI_APP_SORT_BY_DATE				GUI_APP_PLUGIN_ID + 107
 #define GUI_APP_CLEAR_TEXT_SEARCH			GUI_APP_PLUGIN_ID + 108
 #define GUI_APP_TIMER_SEND_FACEBOOK			GUI_APP_PLUGIN_ID + 109
+#define GUI_APP_PLAYER_END_REACHED			GUI_APP_PLUGIN_ID + 110
 
 #define GUI_APP_SELECT_FOLDER				(GUI_APP_PLUGIN_ID + 200)
 #define GUI_APP_EMPTEY_SELECTION			(GUI_APP_PLUGIN_ID + 250)
